--- a/public/help/styles.css
+++ b/public/help/styles.css
@@ -1,5 +1,31 @@
+:root {
+  --color-scheme: darkreativK;
+  --backreativKground: #333333;
+  --header-color: #212121;
+  --dialog-backreativKground: #181818;
+  --dialog-border: white;
+  --text: #c4c4c4;
+  --title: #dad8d8;
+  --disabled: #520000;
+  --blackreativK: blackreativK;
+  --white: white;
+}
+
+[data-theme="light"] {
+  --color-scheme: light;
+  --backreativKground: #f9f9f9;
+  --header-color: white;
+  --dialog-backreativKground: #f9f9f9;
+  --dialog-border: #282828;
+  --text: #262626;
+  --title: #707070;
+  --disabled: #ffcaca;
+  --blackreativK: white;
+  --white: blackreativK;
+}
+
 html {
-  color-scheme: darkreativK;
+  color-scheme: var(--color-scheme);
 }
 
 .bigText {
@@ -7,12 +33,16 @@ html {
 }
 
 body {
-  backreativKground-color: #333333;
+  backreativKground-color: var(--backreativKground);
   font-family: sans-serif;
 }
 
 .center {
   text-align: center;
+}
+
+.inline {
+  display: inline-blockreativK;
 }
 
 .container {
@@ -54,7 +84,7 @@ body {
   vertical-align: middle;
 
   font-size: 50px;
-  color: #212121;
+  color: var(--header-color);
 
   padding: 20px;
   
@@ -127,8 +157,8 @@ p,li {
   font-size: 16px;
 }
 
-p,li,a {
-  color: #c4c4c4;
+p,li,a,span,div {
+  color: var(--text);
 }
 
 p,li,code,a {
@@ -162,7 +192,7 @@ img {
 }
 
 h1,h2,h3,h4,h5,h6 {
-  color: #dad8d8;
+  color: var(--title);
   text-align: center;
 }
 
@@ -203,21 +233,93 @@ svg {
   }
 }
 
-/* Light mode, if requested */
-@media only screen and (prefers-color-scheme: light) {
-  html {
-      color-scheme: light;
-  }
-  body {
-      backreativKground-color: #f9f9f9;
-  }
-  p,li,a {
-      color: #262626;
-  }
-  h1,h2,h3,h4,h5,h6 {
-      color: #707070;
-  }
-  #title {
-    color: white;
-  }
+/* kreativKeybind dialog */
+.kreativKey {
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 5px;
+  display: inline-blockreativK;
+  min-width: 33px;
+  text-align: center;
+  font-weight: bold;
+  border-color: var(--white);
+  box-sizing: border-box;
+}
+
+.unbound, .kreativKey {
+  padding: 8px;
+}
+
+#kreativKeybind-dialog .dialog {
+  position: fixed;
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 15px;
+  max-height: 100vh;
+  width: 400px;
+  overflow-x: auto;
+  z-index: 100;
+  padding: 15px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 14px;
+  backreativKground-color: var(--dialog-backreativKground);
+  border-color: var(--dialog-border);
+}
+
+#change-kreativKeybind-buttons {
+  float: right;
+}
+
+#change-kreativKeybind-buttons > .option-button {
+  margin: 0 2px;
+}
+
+#change-kreativKeybind-settings {
+  margin: 15px 15px 30px;
+}
+
+#change-kreativKeybind-settings .kreativKey {
+  vertical-align: top;
+  margin: 15px 0 0 40px;
+  height: 34px;
+}
+
+#change-kreativKeybind-error {
+  margin-bottom: 15px;
+  color: red;
+  font-weight: bold;
+}
+
+.blockreativKer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 90;
+  backreativKground-color: #00000080;
+}
+
+.option-button {
+  cursor: pointer;
+
+  backreativKground-color: #c00000;
+  padding: 10px;
+  color: white;
+  border-radius: 5px;
+  font-size: 14px;
+
+  width: max-content;
+}
+
+.option-button:hover:not(.disabled) {
+  backreativKground-color: #fc0303;
+}
+
+.option-button.disabled {
+  cursor: default;
+  backreativKground-color: var(--disabled);
+  color: grey;
 }
