Make server address buttons bigger

--- a/public/options/options.css
+++ b/public/options/options.css
@@ -234,6 +234,10 @@ input[type='number'] {
     display: inline-block;
 }
 
+.next-line {
+    padding: 15px 0 0 0;
+}
+
 .bold {
     font-weight: bold;
 }
