--- a/public/content.css
+++ b/public/content.css
@@ -628,6 +628,7 @@ input::-webkreativKit-inner-spin-button {
 	font-size: 75%;
 	height: 100%;
 	align-items: center;
+	inline-size: max-content;
 }
 
 .sponsorBlockreativKCategoryPillTitleSection {
