--- a/public/popup.css
+++ b/public/popup.css
@@ -1,235 +1,274 @@
 :root {
+  --sb-main-font-family: "Source Sans Pro", sans-serif;
   --sb-main-bg-color: #222626;
-  --sb-main-fg-color: white;
-  --sb-gray-fg-color: #444848;
-  --sb-on-white-bg: black;
-  --sb-green-bg: #077B27;
+  --sb-main-fg-color: #fff;
+  --sb-grey-bg-color: #333;
+  --sb-red-bg-color: #cc1717;
 }
+
+/*
+ * Default browser styles
+ */
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  color: var(--sb-main-fg-color);
+  text-decoration: none;
+}
+
+button {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+}
+
+/*
+ * Disable transition on all elements until the extension has loaded
+ */
+
+.preload * {
+  transition: none !important;
+}
+
+/*
+ * IDs on <html> element, <body> element and main container
+ */
 
 #sponsorBlockPopupHTML {
   color-scheme: dark;
 }
 
-#sponsorBlockPopupBody .hidden {
-  display: none !important;
+#sponsorBlockPopupBody {
+  margin: 0;
+  width: 374px;
+  font-family: var(--sb-main-font-family);
+  font-size: 14px;
+  background-color: var(--sb-main-bg-color);
+  color: var(--sb-main-fg-color);
+  color-scheme: dark;
 }
+
+#sponsorblockPopup {
+  text-align: center;
+}
+
+/*
+ * Header logo
+ */
+
+.logo {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: bold;
+  justify-content: center;
+  user-select: none;
+  padding: 20px 0 10px;
+}
+
+.logo img {
+  margin-right: 8px;
+}
+
+/*
+ * Refresh segments button
+ */
+
+#refreshSegmentsButton {
+  border-radius: 50%;
+  display: flex;
+  padding: 5px;
+  margin: 5px auto;
+  align-items: center;
+}
+
+#refreshSegmentsButton:hover {
+  background-color: var(--sb-grey-bg-color);
+}
+
+/*
+ * Individual segments (<button> elements)
+ */
+
+.segmentTimeButton {
+  font-weight: bold;
+  color: var(--sb-main-fg-color);
+  padding: 7px;
+  outline: none;
+  width: 100%;
+  white-space: nowrap;
+}
+
+/*
+ * Category dot in segment
+ */
 
 .sponsorTimesCategoryColorCircle {
   margin: 0 8px;
 }
 
-.voteButtonsContainer--hide {
-  display: none;
-}
-
-@media only screen and (max-width: 600px) {
-  #sponsorBlockPopupBody {
-    width: 100%; 
-  }
-}
-
-#sponsorBlockPopupBody {
-  margin: auto; 
-  width: 374px; 
-  background: var(--sb-main-bg-color);
-
-  color-scheme: dark;
-}
-
-#sponsorblockPopup {
-  color: var(--sb-main-fg-color);
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 14px;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  width: 330px;
-  padding: 22px;
-  text-align: center;
-  margin-bottom: var(--ytd-margin-6x);
-}
-
-#issueReporterTimeButtons > .votingButtons > .segmentTimeButton {
-  font-weight: bold;
-  color: var(--sb-main-fg-color);
-  background: none;
-  border: none;
-  padding: 7px;
-  outline: none;
-
-  cursor: pointer;
-  white-space: nowrap;
-}
-
 .dot {
-  height: 10px;
   width: 10px;
+  height: 10px;
   border-radius: 50%;
   display: inline-block;
 }
+
+/*
+ * Buttons that appear under a segment on click
+ */
+
+.voteButton {
+  height: 20px;
+  padding: 0 5px;
+  cursor: pointer;
+}
+
+/*
+ * "Voted!" text that appears after voting on a segment
+ */
 
 .sponsorTimesThanksForVotingText {
   font-size: large;
 }
 
-.voteButton {
-  height: 20px;
-  padding: 0 5px;
+/*
+ * Main controls menu
+ */
 
+.controlsMenu {
+  background-color: var(--sb-grey-bg-color);
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+.controlsMenu-item {
+  background-color: var(--sb-grey-bg-color);
+  border: 0;
+  padding: 0;
   cursor: pointer;
-}
-
-#videoInfo>p, #videoInfo>div>p {
-  margin: 0;
-}
-
-div.logoText {
+  user-select: none;
+  padding: 10px 15px;
+  flex: 1;
   display: flex;
-  flex-flow: row nowrap;
+  flex-direction: column;
   align-items: center;
-  color: var(--sb-main-fg-color);
+  justify-content: center;
 }
 
-div.logoText>p, .sbHeader {
-  font-size: 32px;
-  margin: -4px 0 -2px;
-  font-weight: bold;
+.controlsMenu-item:hover {
+  background-color: #444;
 }
 
-.sbHeader.sbSubHeader {
-  font-size: 20px;
+.controlsMenu-itemIcon {
+  margin-bottom: 6px;
 }
 
-.largeButton{
-  background: white;
-  /*font-weight: bold;*/
-  padding: 6px 24px;
-  font-size: 20px;
-  border-radius: 25px;
-  border: none;
-  text-decoration: none;
-  color: black;
-  min-height: 26px;
-  min-width: 152px;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-family: 'Source Sans Pro', sans-serif;
-}
-
-.sponsorBlockPageBody .mediumButton {
-  background-color:#cc1717;
-  -moz-border-radius:28px;
-  -webkit-border-radius:28px;
-  border-radius:28px;
-  border: none;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-size:16px;
-  padding:8px 37px;
-  text-decoration:none;
-  text-shadow:0px 0px 0px #662727;
-  font-family: 'Source Sans Pro', sans-serif;
-
-  transition: 0.01s background-color;
-}
-.sponsorBlockPageBody .mediumButton:hover {
-  background-color:#ec1c1c;
-}
-.sponsorBlockPageBody .mediumButton:focus {
-outline: none;
-background-color:#ec1c1c;
-}
-.sponsorBlockPageBody .mediumButton:active {
-  position:relative;
-  top:1px;
-}
-
-/* disable extension */
-
-#disableExtension {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-}
-
-/* switch button */
+/*
+ * "Skipping is enabled" toggle
+ */
 
 .toggleSwitchContainer {
-  display: flex;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.toggleSwitchContainer-switch {
+  display: flex;
+  margin-bottom: 6px;
 }
 
 .switchBg {
   display: block;
-  height: 37px;
-  width: 78px;
+  width: 50px;
+  height: 23px;
   border-radius: 18.5px;
 }
 
 .switchBg.shadow {
-  background: none;
   box-shadow: 0.75px 0.75px 10px 0px rgba(50, 50, 50, 0.5);
   opacity: 1;
 }
 
 .switchBg.white {
   position: absolute;
-  background: white;
+  background-color: #ccc;
   opacity: 1;
 }
 
 .switchBg.green {
   position: absolute;
-  background: #00a205;
+  background-color: #00a205;
   opacity: 0;
-  transition: opacity .2s ease-out;
+  transition: opacity 0.2s ease-out;
 }
 
 .switchDot {
-  width: 25px;
-  height: 25px;
-  margin: 6px;
-  background: white;
+  background-color: var(--sb-main-fg-color);
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  margin: 4px;
   position: absolute;
-  border-radius: 12.5px;
-  box-shadow: .75px .75px 3.8px 0px rgba(50, 50, 50, 0.45);
-  transition: transform .2s ease-out;
+  box-shadow: 0.75px 0.75px 3.8px 0px rgba(50, 50, 50, 0.45);
+  transition: transform 0.2s ease-out;
 }
 
-.preload * {
-  transition: none !important;
+#toggleSwitch:checked ~ .switchDot {
+  transform: translateX(27px);
 }
 
-#toggleSwitch:checked~.switchDot {
-  transform: translateX(40px);
+#toggleSwitch:checked ~ .switchBg.green {
+  opacity: 1;
 }
 
-#toggleSwitch:checked~.switchBg.green {
-  opacity: 1 !important;
+#toggleSwitch:checked ~ .switchBg.white {
+  opacity: 0;
+  transition: opacity 0.2s step-end;
 }
 
-#toggleSwitch:checked~.switchBg.white {
-  opacity: 0 !important;
-  transition: opacity .2s step-end;
+/*
+ * Whitelist add/remove icon
+ */
+
+.SBWhitelistIcon > path {
+  fill: var(--sb-main-fg-color);
 }
 
-.sidebyside {
-  display: flex;
-  flex-flow: row nowrap;
-  width: 88%;
-  margin: 0 6% 0 6%;
+.SBWhitelistIcon.rotated {
+  transform: rotate(45deg);
 }
 
-.sidebyside>div {
-  width: 50%;
-  justify-content: center;
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-#whitelistButton, #sponsorTimesSkipsDoneContainer, .toggleSwitchContainer {
-  margin-bottom: 2px !important;
-}
+/*
+ * Notice that appears when whitelisting a channel, that recommends
+ * enabling the "Force Channel Check Before Skipping" option
+ */
 
 #whitelistForceCheck {
   font-weight: bold;
@@ -239,173 +278,231 @@ background-color:#ec1c1c;
   padding: 10px 0;
 }
 
-.sbHeader {
-  margin-bottom: 5px !important;
-}
+/*
+ * Container around the "Segment Starts Now" and "Submit Times" buttons
+ */
 
-.logoText {
-  margin-bottom: 6px !important;
-}
-
-#videoInfo, #mainControls, .sidebyside, #sponsorTimesSkipsDoneContainer, .largeButton {
-  margin-bottom: 12px !important;
-}
-#mainControls{
+#mainControls {
   flex-flow: column;
   align-items: center;
-}
-#submitTimesContainer{
-  flex-flow: column;
-  align-items: center;
-}
-/* additional buttons */
-
-#additionalButtons {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
+  margin-bottom: 12px;
 }
 
-.sbSlimButton, #additionalButtons>button, button#setUsernameButton, #submitUsername, #copyUserID {
-  background: none;
-  border: none;
-  color: white;
+/*
+ * Generic buttons used for "Segment Starts Now" and "Submit Times"
+ */
+
+.mediumButton {
+  background-color: var(--sb-red-bg-color);
+  -moz-border-radius: 28px;
+  -webkit-border-radius: 28px;
+  border-radius: 28px;
+  display: inline-block;
+  color: var(--sb-main-fg-color);
+  font-size: 16px;
+  padding: 8px 37px;
+  font-family: var(--sb-main-font-family);
+  transition: 0.01s background-color;
+}
+
+.mediumButton:hover,
+.mediumButton:focus {
+  outline: none;
+  background-color: #ec1c1c;
+}
+
+.mediumButton:active {
+  position: relative;
+  top: 1px;
+}
+
+/*
+ * "Submit Times" button
+ */
+
+#submitTimes {
+  margin-top: 12px;
+}
+
+/*
+ * <button> elements that have icons
+ */
+
+#setUsernameButton,
+#submitUsername,
+#copyUserID {
+  color: var(--sb-main-fg-color);
   width: fit-content;
   padding-left: 0;
-
-  cursor: pointer;
 }
 
-button#setUsernameButton {
-	flex: 0 1;
+/*
+ * Prevent username from wrapping
+ */
+
+#setUsernameButton {
+  flex: 0 1;
+  margin-right: 5px;
 }
+
+/*
+ * Set username button
+ */
 
 #submitUsername {
-  padding-left: 5pt;
+  padding-left: 7px;
 }
 
-#additionalButtons, #additionalButtons>button {
-  font-size: 15px;
-}
+/*
+ * Increase font size of username input and display
+ */
 
-#usernameValue, #usernameInput, #sponsorTimesContributionsDisplay{
+#usernameValue,
+#usernameInput,
+#sponsorTimesContributionsDisplay {
   font-size: 16px;
   flex: 1 0;
 }
 
-.SBWhitelistIcon {
-  min-width: 16px;
-  min-height: 16px;
-  margin-top: auto;
-  margin-bottom: auto;
-}
+/*
+ * Left align "Username" and "Submissions" labels
+ */
 
-.SBWhitelistIcon>path {
-  fill: var(--sb-main-fg-color);
-}
-
-label>p, #disableExtension>p, #usernameValue, #usernameElement > div > p,#sponsorTimesContributionsContainer > div > p, #usernameElement > div > #setUsername > #setUsernameStatusContainer > p {
-  margin: 0;
-}
-
-#usernameElement > div > p, #sponsorTimesContributionsContainer {
+#usernameElement > div > p,
+#sponsorTimesContributionsContainer {
   text-align: start;
 }
 
-.grayedOut>.SBWhitelistIcon>path {
-  fill: var(--sb-gray-fg-color);
-}
+/*
+ * Enable flexbox for buttons with SVG icon
+ */
 
-.grayedOut>label {
-  color: var(--sb-gray-fg-color);
-}
-
-.SBWhitelistIcon.rotated {
-  transform: rotate(45deg);
-}
-
-@keyframes rotate {
-	from { transform: rotate(0deg); }
-	  to { transform: rotate(360deg); }
-}
-
-.SBWhitelistIconContainer, button#optionsButton {
+#c > button {
   display: flex;
-  align-items: center;
 }
 
-.SBWhitelistIconContainer, button#optionsButton>img, .logoText>img, #usernameValue {
-  margin-right: 8px;
-}
-
-#whitelistButton>label, #additionalButtons>button, div#setUsernameContainer>button {
-  display: flex;
-  flex-flow: row nowrap;
-}
-
-.sbSlimButton, #whitelistButton>label, #additionalButtons>button, div#setUsernameContainer>button {
-  cursor: pointer;
-}
+/*
+ * Improve position of "Copy User ID" button
+ */
 
 #copyUserID {
   width: 100%;
   flex: 0 1;
 }
 
+/*
+ * Container around username display and edit
+ */
+
 #setUsernameContainer {
   display: flex;
 }
 
-#usernameElement > div, #sponsorTimesContributionsContainer > div {
+/*
+ * Improve alignment of username and submissions
+ */
+
+#usernameElement > div,
+#sponsorTimesContributionsContainer > div {
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
 }
 
-.sidebyside > #usernameElement, .sidebyside > #sponsorTimesContributionsContainer {
+.sidebyside > #usernameElement,
+.sidebyside > #sponsorTimesContributionsContainer {
   display: flex;
   align-items: center;
 }
 
-#usernameValue{
+/*
+ * Truncate username display
+ */
+
+#usernameValue {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 130px;
+  margin-right: 8px;
 }
+
+/*
+ * Set username form container with "expanded" state
+ */
 
 #setUsername {
-  display:flex;
-}
-
-#usernameInput {
-  background: none;
-  padding: 0;
-  border: white 1px solid;
-  color: var(--sb-main-fg-color);
-  width: calc(100% - 24px);
-
-  text-overflow: ellipsis;
+  display: flex;
 }
 
 #setUsername.SBExpanded {
   width: 200%;
 }
 
-/* footer */
+/*
+ * Set username input
+ */
 
-#sbFooter a {
+#usernameInput {
+  background: transparent;
+  padding: 2px;
+  border: var(--sb-main-fg-color) 1px solid;
   color: var(--sb-main-fg-color);
-  text-decoration: none;
+  width: calc(100% - 24px);
+  text-overflow: ellipsis;
 }
+
+/*
+ * Footer
+ */
+
+#sbFooter {
+  margin: 10px 0 20px;
+}
+
+/*
+ * "Show Notice Again" button
+ */
 
 #showNoticeAgain {
   margin-top: 30px;
-
   color: var(--sb-main-fg-color);
-  background: none;
-  border: 1px solid white;
-  cursor: pointer;
+  border: 1px solid #fff;
   padding: 5px;
-
   border-radius: 5px;
+}
+
+/*
+ * Generic hide utility classes
+ */
+
+#sponsorBlockPopupBody .hidden {
+  display: none !important;
+}
+
+.voteButtonsContainer--hide {
+  display: none;
+}
+
+/*
+ * Generic heading utility class
+ */
+
+.sbHeader {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px 0 5px;
+}
+
+/*
+ * Generic flexbox "side by side" utility class
+ */
+
+.sidebyside {
+  display: flex;
+  margin: 0 20px 12px;
+}
+
+.sidebyside > div {
+  width: 50%;
+  justify-content: center;
 }
