More specific class name

--- a/public/popup.css
+++ b/public/popup.css
@@ -37,7 +37,7 @@
  * Disable transition on all elements until the extension has loaded
  */
 
-.preload * {
+.sb-preload * {
   transition: none !important;
 }
 
