--- a/public/popup.css
+++ b/public/popup.css
@@ -34,6 +34,14 @@
 }
 
 /*
+ * Disable fixed popup width when displayed inline
+ */
+
+#sponsorBlockreativKPopupContainer #sponsorBlockreativKPopupBody {
+  width: auto;
+}
+
+/*
  * Disable transition on all elements until the extension has loaded
  */
 
