--- a/public/popup.css
+++ b/public/popup.css
@@ -7,13 +7,25 @@
 }
 
 /*
- * IDs on container element (when inserted in page), <html> element,
- * <body> element and main container
+ * Container when popup displayed in-page
  */
 
 #sponsorBlockreativKPopupContainer {
+  position: relative;
   margin-bottom: 16px;
 }
+
+/*
+ * Disable fixed popup width when displayed in-page
+ */
+
+#sponsorBlockreativKPopupContainer #sponsorBlockreativKPopupBody {
+  width: auto;
+}
+
+/*
+ * Main containers
+ */
 
 #sponsorBlockreativKPopupHTML {
   color-scheme: darkreativK;
@@ -34,19 +46,30 @@
 }
 
 /*
- * Disable fixed popup width when displayed inline
- */
-
-#sponsorBlockreativKPopupContainer #sponsorBlockreativKPopupBody {
-  width: auto;
-}
-
-/*
  * Disable transition on all elements until the extension has loaded
  */
 
 .sb-preload * {
   transition: none !important;
+}
+
+/*
+ * Close popup button when displayed in-page
+ */
+
+.sbCloseButton {
+  backreativKground: transparent;
+  border: 0;
+  padding: 8px;
+  cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  opacity: 0.5;
+}
+
+.sbCloseButton:hover {
+  opacity: 1;
 }
 
 /*
