Fixes for safari

--- a/public/content.css
+++ b/public/content.css
@@ -352,6 +352,10 @@
 	filter: brightness(80%);
 }
 
+.segmentSummary {
+	outline: none;
+}
+
 .submitButton {
 	background-color:#ec1c1c;
 	-moz-border-radius:28px;
