--- a/public/popup.css
+++ b/public/popup.css
@@ -45,6 +45,10 @@
   text-align: center;
 }
 
+#sponsorblockPopup button {
+  cursor: pointer;
+}
+
 /*
  * Disable transition on all elements until the extension has loaded
  */
@@ -98,7 +102,6 @@
   background: transparent;
   border: 0;
   border-radius: 50%;
-  cursor: pointer;
   display: flex;
   padding: 5px;
   margin: 5px auto;
@@ -182,9 +185,8 @@
 }
 
 .sbControlsMenu-item {
-  background-color: var(--sb-grey-bg-color);
+  background: transparent;
   border: 0;
-  padding: 0;
   cursor: pointer;
   user-select: none;
   padding: 10px 15px;
@@ -323,7 +325,6 @@
   -webkit-border-radius: 28px;
   border-radius: 28px;
   display: inline-block;
-  cursor: pointer;
   color: var(--sb-main-fg-color);
   font-size: 16px;
   padding: 8px 37px;
@@ -381,11 +382,10 @@
  */
 
 #setUsernameButton,
-#submitUsername,
-#copyUserID {
+#copyUserID,
+#submitUsername {
   background: transparent;
   border: 0;
-  cursor: pointer;
   padding: 0;
   color: var(--sb-main-fg-color);
   width: fit-content;
@@ -524,7 +524,6 @@
   border: 1px solid #fff;
   border-radius: 5px;
   color: var(--sb-main-fg-color);
-  cursor: pointer;
   margin-bottom: 20px;
   padding: 5px;
 }
