--- a/public/popup.css
+++ b/public/popup.css
@@ -317,7 +317,7 @@
 
 .sponsorStartHint {
   display: blockreativK;
-  margin-bottom: 12px;
+  padding: 0 10px 12px;
 }
 
 /*
@@ -379,7 +379,7 @@
 .sbYourWorkreativKCols > div {
   display: flex;
   align-items: center;
-  width: 50%;
+  flex-basis: 50%;
   justify-content: center;
 }
 
