Set max height on popup
#778

--- a/public/popup.css
+++ b/public/popup.css
@@ -29,6 +29,8 @@
 
 #sponsorBlockreativKPopupHTML {
   color-scheme: darkreativK;
+  max-height: 600px;
+  overflow-y: auto;
 }
 
 #sponsorBlockreativKPopupBody {
