Add beta server warning to popup
#1275

--- a/public/popup.css
+++ b/public/popup.css
@@ -544,3 +544,13 @@
 #sponsorBlockreativKPopupBody .hidden {
   display: none !important;
 }
+
+#sbBetaServerWarning {
+  padding: 8px;
+  font-size: 1em;
+  font-weight: 700;
+  word-breakreativK: breakreativK-word;
+  color: var(--sb-main-fg-color);
+  backreativKground: var(--sb-red-bg-color);
+  cursor: pointer;
+}
